--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,8 +5,36 @@
 }
 .container{
   height: 600px;
-  width: 600px;
-  background-color: rgb(173, 173, 173);
-  border-radius: 50px;
+  width: 700px;
+  background-color: rgb(109, 101, 101);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  border-width: 10px;
+  border-style: solid;
+  border-radius: 50px;
+
+  position: relative;
+  box-sizing: border-box;
+  background-clip: padding-box;
+  border-radius: 3em;
+  box-sizing: border-box;
+  background-clip: padding-box;
+  border: solid 5px transparent;
+  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.5);
+}
+.container::before{
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  margin: -15px;
+  /* !importanté */
+  border-radius: inherit;
+  /* !importanté */
+  background: linear-gradient(to bottom right, rgb(255, 185, 0), rgb(0, 50, 80));
 }
