--- a/frontend/src/pages/Homepage.css
+++ b/frontend/src/pages/Homepage.css
@@ -1,25 +1,135 @@
 .containerHome{
+    height: 90%;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0px;
+}
+ul {
+    list-style-type: none;
+    counter-reset: my-counter;
+    padding-left: 0;
+}
+li::before {
+    counter-increment: my-counter;
+    content: counter(my-counter) " ";
+}
+.left{
     height: 100%;
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     align-items: center;
 }
-.vizualizer{
-    height: 30px;
-    width: 50px;
-    background-color: black;
-    border-radius: 20px;
+.right{
+    height: 100%;
+    width: 100%;
+    gap: 170px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
+.logo{
+    display: flex;
+    flex-direction: column;
+    font-size: 23px;
+}
+
+.label{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 35px;
+}
+#visualizer{
+    height: 90px;
+    width: 230px;
+    display: flex;
+    margin-top: 50px;
 }
 .adds{
-    height: 30px;
-    width: 50px;
-    background-color: rgb(255, 255, 255);
-    border-radius: 20px; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 240px;
+    width: 300px;
+    background-image: url("/Users/morteanualexandru/Desktop/rodio/frontend/public/ADD.png");
+    background-size: cover;
+    border-radius: 30px; 
+    box-shadow: inset 0 0 30px rgba(0, 0, 0, 5);
+}
+.top{
+    margin-top: 20px;
+}
+.getStart{
+    height: 40px;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    border: solid;
+    border-width: 2px;
+    background-color: none;
+    transition: 0.1s;
+    cursor: pointer;
+    color: rgb(255, 185, 0);
+}
+.getStart:hover{
+    background-color: rgb(255, 185, 0);
+}
+.getStart:hover:hover .get{
+    color: rgb(109, 101, 101);
+}
+.get{
+    transition: 0.1s;
+    text-decoration: none;
+    color: rgb(255, 185, 0);
+}
+.liderboard{
+    display: flex;
+    justify-content: center;
+    gap: 28px;
+    align-items: center;
+    width: 100%;
 }
 .currentStation{
-    height: 30px;
-    width: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+    width: 200px;
+    color: white;
     background-color: rgb(0, 0, 0);
-    border-radius: 20px; 
+    border-radius: 20px;
+}
+.buttons{
+    display: flex;
+    gap: 10px;
+}
+.on:hover,.volume:hover,.next:hover{
+    background-color: rgb(215, 158, 0);
+}
+.on:hover p,.volume:hover p,.next:hover p{
+    color: rgb(112, 111, 111);
+}
+p{
+    transition: 0.5s;
+    color: rgb(50, 50, 50);
+}
+.on, .volume,.next{
+    transition: 0.5s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 70px;
+    width: 70px;
+    border-width: 2px;
+    box-shadow:  3px 3px 3px rgb(0, 0, 0);
+    border-radius: 100%;
+    cursor: pointer;
+    background-color:rgb(255, 185, 0);
 }
