--- a/frontend/src/pages/Administrator/Admin.css
+++ b/frontend/src/pages/Administrator/Admin.css
@@ -84,3 +84,12 @@
 .adminSwitch :hover{
     background-color: red;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type="number"] {
+  -moz-appearance: textfield; /* Firefox */
+}
