--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   align-items: center;
 }
 html, body {
+  font-family: 'Asap', sans-serif;
   overflow-x: hidden;
   min-height: 100%;
   padding:15px 0;
